--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/elements": "^1.3.18",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@supabase/supabase-js": "^2.32.0",
     "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0"
+    "react-native-screens": "^3.24.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
