--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-share": "^9.2.3",
     "react-native-splash-screen": "^3.3.0",
     "react-native-url-polyfill": "^2.0.0"
   },
